# Codex-TTS2

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  README.md  detekt.yml  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/jni/: codex_tts_jni.cpp
app/src/main/kotlin/com/coodex/codextts2/: MainActivity.kt
app/src/main/kotlin/com/coodex/codextts2/tts/: CodexTtsService.kt  ModelManager.kt  SherpaOnnxTtsEngine.kt  TtsEngine.kt  WavWriter.kt
app/src/main/kotlin/com/coodex/codextts2/ui/: DebugTtsActivity.kt
app/src/main/kotlin/com/coodex/tts/: MainActivity.kt  NativeLib.kt
app/src/main/kotlin/com/k2fsa/sherpa/onnx/: Tts.kt
app/src/main/res/layout/: activity_debug_tts.xml  activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/xml/: tts_engine.xml
app/src/test/kotlin/com/coodex/codextts2/tts/: WavWriterTest.kt
docs/: ARCHITECTURE.md  DO_NOT_BREAK.md
gradle/: libs.versions.toml
native/: CMakeLists.txt
native/include/codex/: engine.h  g2p.h  text_normalizer.h
native/src/: engine.cpp  g2p.cpp  text_normalizer.cpp
native/tests/: engine_test.cpp  text_normalizer_test.cpp
tts-core/: build.gradle.kts  consumer-rules.pro
tts-core/src/main/kotlin/com/coodex/codextts2/core/: StubTtsEngine.kt  TtsEngine.kt
tts-core/src/main/kotlin/com/coodex/tts/core/engine/: LanguageSupport.kt  TtsEngine.kt
tts-core/src/main/kotlin/com/coodex/tts/core/model/: SynthesisRequest.kt  SynthesisResult.kt  VoiceInfo.kt
tts-core/src/main/kotlin/com/coodex/tts/core/phoneme/: GraphemeToPhoneme.kt  Phoneme.kt  TextNormalizer.kt
tts-core/src/test/kotlin/com/coodex/codextts2/core/: StubTtsEngineTest.kt
tts-native/: CMakeLists.txt
tts-onnx/: build.gradle.kts  consumer-rules.pro
tts-onnx/src/main/kotlin/com/coodex/codextts2/onnx/: OnnxTtsEngine.kt
